# dnd-transcriber

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT_PROMPTS.md  README.md  pyproject.toml  roster_test.json
.github/workflows/: tests.yml
src/dnd_transcriber/: __init__.py  __main__.py  cli.py  confidence.py  config.py  context.py  formatter.py  models.py  pipeline.py  preprocessor.py  roster.py  transcriber.py  validator.py
src/dnd_transcriber/utils/: audio.py  time.py
tests/: conftest.py  test_components.py  test_utils.py
